Added HTML structure. SPA

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,24 @@
 
 </head>
 <body>
+
+    <header>
+        <h1>Dokumenthanteraren</h1>
+    </header>
+    <nav>
+        <ul>
+            <li>Huvudsida</li>
+            <li>Mina dokument</li>
+            <li>Skapa nytt dokument</li>
+        </ul>
+    </nav>
+    <div id="root"></div>
+    <footer>
+        <a href="#">Om oss</a>
+        <a href="#">Kontakt</a>
+        <span>Copyright TessDevon</span>
+    </footer>
     
-    
+
 </body>
 </html>
