--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,9 +15,25 @@
     <header>
         <h1>Dokumenthanteraren</h1>
     </header>
-    <div id="User">
-        //LogginUser
-        //NewUser
+    <div id="userContainer">
+        <div id="loginUser">
+            <h3 class="userh3">Inloggning</h3>
+            <label for="name">E-post:</label>
+            <input class="userInput" type="text" id="name" name="name">
+            <label for="password">Lösenord:</label>
+            <input class="userInput" type="text" id="password" name="password">
+            <button id="loginUserBtn">Logga in</button>
+        </div>
+        <p id="serverMassage"></p>
+        <div id="savenewUser">
+            <h3 class="userh3">Ny användare</h3>
+            <label for="newname">E-post:</label>
+            <input class="userInput" type="text" id="newname" name="newname">
+            <label for="newpassword">Lösenord:</label>
+            <input class="userInput" type="text" id="newpassword" name="newpassword">
+            <button id="saveUserBtn">Spara ny användare</button>
+        <!--<input type="submit" value="Skicka">-->
+        </div>
     </div>
     <nav>
         <ul>
@@ -27,21 +43,22 @@
         </ul>
     </nav>
     <div id="root">
-        
-        <h2>Välkommen till Dokumenthanteraren!</h2>
-        <article>
-            <h3>Om företaget</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </article>
-        <article>
-            <h3>Nytt</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </article>
+        <section class="firstSiteSection">
+            <h2>Välkommen till Dokumenthanteraren!</h2>
+            <article>
+                <h3>Vår vission</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborumSed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?.</p>
+            </article>
+            <article>
+                <h3>Nytt</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
+            </article>
+        </section>
     </div>
     <footer>
-        <a href="#">Om oss</a>
-        <a href="#">Kontakt</a>
-        <span>Copyright TessDevon</span>
+        <a class="linkFooter" href="#">Om oss</a>
+        <a class="linkFooter" href="#">Kontakt</a>
+        <span>Copyright by Dokumenthanteraren</span>
     </footer>
     
 
