Added button to save notes. Old one just show DOM.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,6 +36,7 @@
 
             <label for="newEmail">E-post:</label>
             <input class="userInput" type="email" id="newEmail" name="newEmail">
+            <p id="errorMessage"></p>
             <label for="newPassword">Lösenord:</label>
             <input class="userInput" type="text" id="newPassword" name="newPassword">
             <button class="userInput" id="saveUserBtn">Spara ny användare</button>
